product filter, sorting, pagination, validation and bootstrap styling